# Noordervliet-ShoppingList

./: LISCENCE  README.md  base.html  forms.py  home.html  index.js  login.html  logout.html  main.css  main.py  models.py  project.db  pyproject.toml  requirement.txt  routes.py  run.py  setup.py  shoppinglist.css  shoppinglist.html  signup.html
shoplist_app/: forms.py  main.py  models.py  routes.py  routes_views.py  run.py
shoplist_app/instance/: project.db
shoplist_app/static/: index.js  main.css  shoppinglist.css
shoplist_app/templates/: base.html  home.html  login.html  logout.html  shoppinglist.html  signup.html
