[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Noordevliet-ShoppingList"
version = "0.0.1"
dependencies = [
  "httpx",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>2.0; os_name == 'nt'",
]
requires-python = ">=3.8"
authors = "A.Noordervliet"
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
description = "Shopping list application"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["shoppinglist", "list", "groceries", "notes", "pantry"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

=