[project]
name = "shoplist_app"
version = "0.0.1"
dependencies = [
  "bcrypt==4.1.3",
  "email_validator==2.1.1",
  "Flask==3.0.3",
  "Flask-Bcrypt==1.0.1",
  "Flask-Login==0.6.3",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.1",
  "Jinja2==3.1.4",
  "SQLAlchemy==2.0.30",
  "WTForms==3.1.2"
]
requires-python = ">=3.8"
authors = "A.Noordervliet"

description = "Shopping list application"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["shoppinglist", "list", "groceries", "notes", "pantry"]
